--- a/index.html
+++ b/index.html
@@ -4,61 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="portfolio.css">
-    <link rel="stylesheet" href="subclass$events.css">
-    <title>Portfolio</title>
+    <title>Portfolio - Raushan Kumar</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 
 <body>
-    <header class="head">
-        <div class="Profile">
-            <div id="Profile-Logo">Profile-Logo</div>
-        </div>
-        <div class="navList">
-            <nav>
-                <ul id="navList">
-                    <li><a href="#">What we do</a></li>
-                    <li><a href="#">Achievements</a></li>
-                    <li><a href="#">Memories</a></li>
-                    <li><a href="#">Get in Touch</a></li>
-                </ul>
-            </nav>
+    <header>
+        <div class="head">
+            <div class="headFirstChild" id="headFirstChild">
+                HELLO BABY!!!!
+            </div>
         </div>
     </header>
-
     <main>
-        <div class="head">
-            <div class="contents">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, animi iusto? Nisi, nihil temporibus, illo fugiat illum nemo a voluptatem iure recusandae minus dicta libero fugit vero ipsum totam magnam?
-            Odio adipisci animi id quidem amet neque voluptate a atque aspernatur eos! Numquam vel voluptatum fuga deleniti voluptate, corrupti autem eveniet, quam repellat maxime libero hic quisquam laboriosam earum iste!
-            Repudiandae, accusamus non. Modi sed molestiae quas earum iure non animi ipsam exercitationem dolorem, tenetur commodi eius asperiores necessitatibus, explicabo veniam, tempora ipsa nulla. In pariatur vel ipsam reprehenderit accusantium?
-            Fugit maiores perferendis libero eius aperiam fugiat, at repudiandae error praesentium tenetur provident eum ullam temporibus exercitationem harum aliquid optio reprehenderit quae iure laboriosam explicabo esse! Dolores perferendis earum laboriosam?
-            Ab doloremque aut sunt commodi quo, ea aliquid. Velit quos in est, animi, voluptas impedit fugit esse a asperiores dolorem beatae officiis! Molestias ullam, eaque iste velit inventore adipisci earum.</div>
-            <div class="contents">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo laudantium itaque unde nihil rem? Error temporibus maxime nesciunt eaque dolores nostrum, reiciendis ut quod! Sed incidunt iusto soluta. Ex, quaerat.
-            Possimus laudantium enim tempora soluta, quasi ut perspiciatis molestias architecto nemo expedita eaque, ratione tempore ea iste quia veniam. Qui repudiandae nostrum enim reiciendis voluptate fugit doloribus illum eius impedit.
-            Quam cupiditate cumque ut temporibus ad accusamus hic ratione culpa odio possimus, aspernatur architecto, aliquam, cum repellendus. Optio quam, saepe eum numquam natus dignissimos facere autem amet aliquid quos fugit.
-            Dolorum explicabo adipisci, voluptatibus molestiae numquam quo magni fuga distinctio tempore? Facere incidunt, ducimus repellat, quidem, blanditiis quas cumque libero dignissimos minus nesciunt reprehenderit iusto nemo numquam suscipit ratione dolores?
-            Repellendus suscipit dolore cupiditate quibusdam. Placeat accusantium ullam perferendis maiores nulla. Nesciunt modi minima repellendus porro. Facilis fugiat, harum ducimus quae, numquam corporis consequuntur odit minus quo laborum accusamus aut.
-            Unde delectus voluptatum non. Soluta voluptatibus deserunt iusto consectetur, amet blanditiis, quos repellendus nostrum aspernatur laborum sequi tempore impedit doloribus autem sunt molestias dolorum natus magni eum saepe odit dolor?
-            Minima hic vel dolorum quae, magnam officiis fugit voluptate officia. Excepturi, minima explicabo atque eum molestias error, modi mollitia, praesentium sed laboriosam nesciunt quis voluptates voluptatem molestiae incidunt? Facere, quaerat?
-            Aspernatur commodi esse aut blanditiis sequi autem in! Eius natus repudiandae, cum quis vel dolorem! Voluptates officia sunt minus labore ullam ex autem quia quis commodi omnis! Cum, porro minus.
-            Fugiat corrupti excepturi qui deleniti numquam sed sint cum possimus, adipisci quas culpa id porro, velit voluptate? Voluptate commodi labore illo culpa? Ipsam error labore ex quae, id cupiditate molestiae.
-            Sint cumque sit, vel fuga numquam eligendi doloremque officiis enim dolorum harum et voluptates qui assumenda veritatis totam sequi quisquam delectus corporis. Hic sit dolores, officiis eum nostrum magnam tempora.</div>
-            <div class="contents">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo laudantium itaque unde nihil rem? Error temporibus maxime nesciunt eaque dolores nostrum, reiciendis ut quod! Sed incidunt iusto soluta. Ex, quaerat.
-            Possimus laudantium enim tempora soluta, quasi ut perspiciatis molestias architecto nemo expedita eaque, ratione tempore ea iste quia veniam. Qui repudiandae nostrum enim reiciendis voluptate fugit doloribus illum eius impedit.
-            Quam cupiditate cumque ut temporibus ad accusamus hic ratione culpa odio possimus, aspernatur architecto, aliquam, cum repellendus. Optio quam, saepe eum numquam natus dignissimos facere autem amet aliquid quos fugit.
-            Dolorum explicabo adipisci, voluptatibus molestiae numquam quo magni fuga distinctio tempore? Facere incidunt, ducimus repellat, quidem, blanditiis quas cumque libero dignissimos minus nesciunt reprehenderit iusto nemo numquam suscipit ratione dolores?
-            Repellendus suscipit dolore cupiditate quibusdam. Placeat accusantium ullam perferendis maiores nulla. Nesciunt modi minima repellendus porro. Facilis fugiat, harum ducimus quae, numquam corporis consequuntur odit minus quo laborum accusamus aut.
-            Unde delectus voluptatum non. Soluta voluptatibus deserunt iusto consectetur, amet blanditiis, quos repellendus nostrum aspernatur laborum sequi tempore impedit doloribus autem sunt molestias dolorum natus magni eum saepe odit dolor?
-            Minima hic vel dolorum quae, magnam officiis fugit voluptate officia. Excepturi, minima explicabo atque eum molestias error, modi mollitia, praesentium sed laboriosam nesciunt quis voluptates voluptatem molestiae incidunt? Facere, quaerat?
-            Aspernatur commodi esse aut blanditiis sequi autem in! Eius natus repudiandae, cum quis vel dolorem! Voluptates officia sunt minus labore ullam ex autem quia quis commodi omnis! Cum, porro minus.
-            Fugiat corrupti excepturi qui deleniti numquam sed sint cum possimus, adipisci quas culpa id porro, velit voluptate? Voluptate commodi labore illo culpa? Ipsam error labore ex quae, id cupiditate molestiae.
-            Sint cumque sit, vel fuga numquam eligendi doloremque officiis enim dolorum harum et voluptates qui assumenda veritatis totam sequi quisquam delectus corporis. Hic sit dolores, officiis eum nostrum magnam tempora.</div>
+        <div class="main">
+            <div class="mainFirstChild" id="mainFirstChild">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio cupiditate ullam fugiat quibusdam quam, ipsum alias cumque necessitatibus odio mollitia sunt perferendis, id debitis aliquam? Ipsa iure maiores recusandae dicta dolor ex tempora, incidunt exercitationem vero neque ullam voluptates beatae aspernatur illum, alias eum dolorum. Sed laudantium fuga cum autem quasi maiores minima voluptates deleniti omnis dolorem ducimus quod debitis tempora pariatur fugiat modi impedit fugit nulla, saepe rerum a consequatur. Repellendus unde minima sed dolor, maiores quis quasi molestiae natus optio, voluptates numquam eveniet quas nesciunt qui commodi, architecto dicta. Vitae dolore exercitationem, porro nostrum iure quia odio nemo asperiores at ad modi optio amet eum velit tempore reprehenderit obcaecati, veritatis aperiam deserunt sint adipisci accusantium, id non? Maxime dolore quae iure. Animi neque a voluptate provident ipsam excepturi doloremque quae itaque quam nobis nulla aut optio harum nihil architecto facere alias libero, iste perspiciatis corrupti et maxime fugit voluptatum? Nisi officia molestias, corrupti sint placeat, blanditiis beatae ipsa cupiditate fugit ducimus rerum, delectus ipsam perferendis officiis corporis aspernatur tenetur commodi veniam dignissimos deleniti in ex illum? Natus veritatis, corrupti iusto minus, facilis nobis suscipit explicabo aperiam consequuntur eligendi nulla quod. Dolor, numquam at. Officia blanditiis molestias quidem eligendi!
+                <span>text me</span>
+                <div class="test">
+                    yeah sure
+                </div>
+            </div>
+            <div class="mainSecondChild">
+                <img src="profile_pic.jpg" alt="">
+            </div>
         </div>
     </main>
-
     <footer>
+        <div class="footer">
+            <div class="footerFirstChild">
 
+            </div>
+        </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
