--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="head">
             <div class="headFirstChild" id="headFirstChild">
-                HELLO BABY!!!!
+             Raushan's Portfolio
             </div>
         </div>
     </header>
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="mainSecondChild">
-                <img src="profile_pic.jpg" alt="">
+                <img src="profile_pic.png" id="profileImage" alt="Raushan-profile-picture">
             </div>
         </div>
     </main>
