--- a/index.html
+++ b/index.html
@@ -13,14 +13,32 @@
     <header>
         <div class="head">
             <div class="headFirstChild" id="headFirstChild">
-             Raushan's Portfolio
+                <div class="nav">Programming</div>
+                <div class="nav">Development</div>
+                <div class="nav">Interface-less</div>
+                <div class="nav">Data Science</div>
+                <div class="nav">Academics</div>
             </div>
         </div>
     </header>
     <main>
         <div class="main">
             <div class="mainFirstChild" id="mainFirstChild">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio cupiditate ullam fugiat quibusdam quam, ipsum alias cumque necessitatibus odio mollitia sunt perferendis, id debitis aliquam? Ipsa iure maiores recusandae dicta dolor ex tempora, incidunt exercitationem vero neque ullam voluptates beatae aspernatur illum, alias eum dolorum. Sed laudantium fuga cum autem quasi maiores minima voluptates deleniti omnis dolorem ducimus quod debitis tempora pariatur fugiat modi impedit fugit nulla, saepe rerum a consequatur. Repellendus unde minima sed dolor, maiores quis quasi molestiae natus optio, voluptates numquam eveniet quas nesciunt qui commodi, architecto dicta. Vitae dolore exercitationem, porro nostrum iure quia odio nemo asperiores at ad modi optio amet eum velit tempore reprehenderit obcaecati, veritatis aperiam deserunt sint adipisci accusantium, id non? Maxime dolore quae iure. Animi neque a voluptate provident ipsam excepturi doloremque quae itaque quam nobis nulla aut optio harum nihil architecto facere alias libero, iste perspiciatis corrupti et maxime fugit voluptatum? Nisi officia molestias, corrupti sint placeat, blanditiis beatae ipsa cupiditate fugit ducimus rerum, delectus ipsam perferendis officiis corporis aspernatur tenetur commodi veniam dignissimos deleniti in ex illum? Natus veritatis, corrupti iusto minus, facilis nobis suscipit explicabo aperiam consequuntur eligendi nulla quod. Dolor, numquam at. Officia blanditiis molestias quidem eligendi!
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio cupiditate ullam fugiat quibusdam quam,
+                ipsum alias cumque necessitatibus odio mollitia sunt perferendis, id debitis aliquam? Ipsa iure maiores
+                recusandae dicta dolor ex tempora, incidunt exercitationem vero neque ullam voluptates beatae aspernatur
+                illum, alias eum dolorum. Sed laudantium fuga cum autem quasi maiores minima voluptates deleniti omnis
+                dolorem ducimus quod debitis tempora pariatur fugiat modi impedit fugit nulla, saepe rerum a
+                consequatur. Repellendus unde minima sed dolor, maiores quis quasi molestiae natus optio, voluptates
+                numquam eveniet quas nesciunt qui commodi, architecto dicta. Vitae dolore exercitationem, porro nostrum
+                iure quia odio nemo asperiores at ad modi optio amet eum velit tempore reprehenderit obcaecati,
+                veritatis aperiam deserunt sint adipisci accusantium, id non? Maxime dolore quae iure. Animi neque a
+                voluptate provident ipsam excepturi doloremque quae itaque quam nobis nulla aut optio harum nihil
+                architecto facere alias libero, iste perspiciatis corrupti et maxime fugit voluptatum? Nisi officia
+                molestias, corrupti sint placeat, blanditiis beatae ipsa cupiditate fugit ducimus rerum, delectus ipsam
+                perferendis officiis corporis aspernatur tenetur commodi veniam dignissimos deleniti in ex illum? Natus
+                veritatis, corrupti iusto minus, facilis nobis suscipit explicabo aperiam consequuntur eligendi nulla
+                quod. Dolor, numquam at. Officia blanditiis molestias quidem eligendi!
                 <span>text me</span>
                 <div class="test">
                     yeah sure
