Added underscore and the nav textContent into an Array

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
         <div class="head">
             <div class="headFirstChild" id="headFirstChild">
-                <div class="nav">Programming</div>
-                <div class="nav">Development</div>
-                <div class="nav">Interface-less</div>
-                <div class="nav">Data Science</div>
-                <div class="nav">Academics</div>
+                <div class="nav" id="firstNav">Programming</div>
+                <div class="nav" id="secondNav">Development</div>
+                <div class="nav" id="thirdNav">Interface-less</div>
+                <div class="nav" id="fourthNav">Data Science</div>
+                <div class="nav" id="fifthNav">Academics</div>
             </div>
         </div>
     </header>
