--- a/index.html
+++ b/index.html
@@ -14,38 +14,38 @@
         <div class="head">
             <div class="headFirstChild" id="headFirstChild">
                 <div class="nav" id="firstNav">Programming</div>
-                <div class="nav" id="secondNav">Development</div>
-                <div class="nav" id="thirdNav">Interface-less</div>
-                <div class="nav" id="fourthNav">Data Science</div>
-                <div class="nav" id="fifthNav">Academics</div>
+                <div class="nav" id="firstNav">Development</div>
+                <div class="nav" id="firstNav">Interface-less</div>
+                <div class="nav" id="firstNav">Data Science</a></div>
+                <div class="nav" id="firstNav">Academics</div>
             </div>
         </div>
     </header>
     <main>
         <div class="main">
-            <div class="mainFirstChild" id="mainFirstChild">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio cupiditate ullam fugiat quibusdam quam,
-                ipsum alias cumque necessitatibus odio mollitia sunt perferendis, id debitis aliquam? Ipsa iure maiores
-                recusandae dicta dolor ex tempora, incidunt exercitationem vero neque ullam voluptates beatae aspernatur
-                illum, alias eum dolorum. Sed laudantium fuga cum autem quasi maiores minima voluptates deleniti omnis
-                dolorem ducimus quod debitis tempora pariatur fugiat modi impedit fugit nulla, saepe rerum a
-                consequatur. Repellendus unde minima sed dolor, maiores quis quasi molestiae natus optio, voluptates
-                numquam eveniet quas nesciunt qui commodi, architecto dicta. Vitae dolore exercitationem, porro nostrum
-                iure quia odio nemo asperiores at ad modi optio amet eum velit tempore reprehenderit obcaecati,
-                veritatis aperiam deserunt sint adipisci accusantium, id non? Maxime dolore quae iure. Animi neque a
-                voluptate provident ipsam excepturi doloremque quae itaque quam nobis nulla aut optio harum nihil
-                architecto facere alias libero, iste perspiciatis corrupti et maxime fugit voluptatum? Nisi officia
-                molestias, corrupti sint placeat, blanditiis beatae ipsa cupiditate fugit ducimus rerum, delectus ipsam
-                perferendis officiis corporis aspernatur tenetur commodi veniam dignissimos deleniti in ex illum? Natus
-                veritatis, corrupti iusto minus, facilis nobis suscipit explicabo aperiam consequuntur eligendi nulla
-                quod. Dolor, numquam at. Officia blanditiis molestias quidem eligendi!
-                <span>text me</span>
-                <div class="test">
-                    yeah sure
-                </div>
-            </div>
+            <div class="mfc_1">PROGRAMMING </div>
+            <div class="mfc_2">DEVELOPMENT </div>
+            <div class="mfc_3">INTERFACE-LESS </div>
+            <div class="mfc_4">DATA SCIENCE </div>
+            <div class="mfc_5">ACADEMICS </div>
+            <!-- sideView -->
             <div class="mainSecondChild">
-                <img src="profile_pic.png" id="profileImage" alt="Raushan-profile-picture">
+                <div class="msc">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quod accusantium veritatis nam quibusdam
+                    tempora, sunt corporis nemo, a sint dolore aut, eveniet quia cum ratione recusandae incidunt
+                    voluptatibus! Odit.
+                    Vero eligendi assumenda dicta itaque ratione nihil, soluta, praesentium architecto pariatur quaerat
+                    fugit corporis quisquam? Voluptas doloremque sequi quo architecto vel dolorem assumenda atque! Rerum
+                    accusamus eum voluptatem molestias laboriosam!
+                    Mollitia repellendus autem vel iusto tempore sapiente suscipit accusamus asperiores aut delectus
+                    aperiam iste rem commodi nemo voluptate modi quasi, veniam itaque. Totam labore id vitae veniam
+                    doloribus, ipsam illum?
+                    Recusandae vel pariatur dolor, maiores nihil id ab fugit modi, eos quae unde dignissimos, voluptates
+                    dolorum nemo obcaecati veritatis illum cupiditate accusamus animi debitis. Inventore culpa nisi
+                    magni quaerat totam?
+                    Quod sequi minus harum eum? Fuga ex autem eius repellat laudantium vero. Delectus accusantium optio
+                    eveniet, doloribus earum est blanditiis iure hic nobis magnam corporis vero itaque nesciunt fuga a!
+                </div>
             </div>
         </div>
     </main>
@@ -57,6 +57,7 @@
         </div>
     </footer>
     <script src="script.js"></script>
+
 </body>
 
 </html>
