--- a/index.html
+++ b/index.html
@@ -30,22 +30,6 @@
             <div class="mfc_5">ACADEMICS </div>
             <!-- sideView -->
             <div class="mainSecondChild">
-                <div class="msc">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quod accusantium veritatis nam quibusdam
-                    tempora, sunt corporis nemo, a sint dolore aut, eveniet quia cum ratione recusandae incidunt
-                    voluptatibus! Odit.
-                    Vero eligendi assumenda dicta itaque ratione nihil, soluta, praesentium architecto pariatur quaerat
-                    fugit corporis quisquam? Voluptas doloremque sequi quo architecto vel dolorem assumenda atque! Rerum
-                    accusamus eum voluptatem molestias laboriosam!
-                    Mollitia repellendus autem vel iusto tempore sapiente suscipit accusamus asperiores aut delectus
-                    aperiam iste rem commodi nemo voluptate modi quasi, veniam itaque. Totam labore id vitae veniam
-                    doloribus, ipsam illum?
-                    Recusandae vel pariatur dolor, maiores nihil id ab fugit modi, eos quae unde dignissimos, voluptates
-                    dolorum nemo obcaecati veritatis illum cupiditate accusamus animi debitis. Inventore culpa nisi
-                    magni quaerat totam?
-                    Quod sequi minus harum eum? Fuga ex autem eius repellat laudantium vero. Delectus accusantium optio
-                    eveniet, doloribus earum est blanditiis iure hic nobis magnam corporis vero itaque nesciunt fuga a!
-                </div>
             </div>
         </div>
     </main>
@@ -56,7 +40,8 @@
             </div>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
+    <script src="header.js"></script>
 
 </body>
 
