--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div class="mfc_5">ACADEMICS </div>
             <!-- sideView -->
             <div class="mainSecondChild">
+                <div class="sideview">I'm on the side okay</div>
             </div>
         </div>
     </main>
