packed main in grids

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
         <div class="head">
             <div class="headFirstChild" id="headFirstChild">
-                <div class="nav" id="firstNav">Programming</div>
-                <div class="nav" id="firstNav">Development</div>
-                <div class="nav" id="firstNav">Interface-less</div>
-                <div class="nav" id="firstNav">Data Science</a></div>
-                <div class="nav" id="firstNav">Academics</div>
+                <div class="nav">Programming</div>
+                <div class="nav">Development</div>
+                <div class="nav">Interface-less</div>
+                <div class="nav">Data Science</div>
+                <div class="nav">Academics</div>
             </div>
         </div>
     </header>
@@ -30,7 +30,7 @@
             <div class="mfc_5">ACADEMICS </div>
             <!-- sideView -->
             <div class="mainSecondChild">
-                <div class="sideview">I'm on the side okay</div>
+                <div><img src="profile_pic.png" alt="profile_pic"></div>
             </div>
         </div>
     </main>
